--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -235,7 +235,7 @@
                                                                         button         => "btn click",
                                                                         action       => "mostrarEstantesVirtualesDeGrupo([% id2 %])", 
                                                                         icon         => "icon-info-sign",
-                                                                        title        => "[% 'Ver estantes virtuales en los que se encuentra' | i18n %]",
+                                                                        title        => "[% 'Ver estantes' | i18n %]",
                                                                     ) ;
 
                                 [% END %]
