--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -197,7 +197,7 @@
             </div>
 
             <div class="control-group error">
-                    <label class="control-label" for="categoria_socio_id">[% "Categor&iacute;ao" | i18n %]*</label>
+                    <label class="control-label" for="categoria_socio_id">[% "Categor&iacute;a" | i18n %]*</label>
                     <div class="controls">
                           [% comboDeCategorias %]
                     </div>
