--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_tipo_de_prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_tipo_de_prestamos.tmpl
@@ -1,15 +1,19 @@
-<div class="control-group">
-        [% IF tipo_sancion %]
-              <label class="control-label" for="chkTP">[% "Se aplica a" | i18n %]</label>
-              <div class="controls">
-                  [% FOREACH tipo_prestamo IN TIPOS_PRESTAMOS %]
-                        <label class="checkbox">
-                          <input type="checkbox" name="chkTP" id="chkTP" value="[% tipo_prestamo.getId_tipo_prestamo %]" [% IF tipo_sancion.aplicaAlTipoDePrestamo( tipo_prestamo.getId_tipo_prestamo ) %] checked="checked" [% END %] > [% tipo_prestamo.getDescripcion %]        
-                        </label>
-                  [% END %]
-              </div>
-        [% END %]
-</div>
+[% IF tipo_sancion %]
+		<h4 >[% "Se aplica a" | i18n %]</h4>
+		<hr />
+		<dl style="width:60%;">
+          [% FOREACH tipo_prestamo IN TIPOS_PRESTAMOS %]
+                <dt class="inline  rightMargin">&nbsp;&nbsp;&nbsp;[% tipo_prestamo.getDescripcion %]</dt>
+                <dd class="left">
+                 <input type="checkbox" name="chkTP" id="chkTP_[% tipo_prestamo.getId_tipo_prestamo %]" 
+                           value="[% tipo_prestamo.getId_tipo_prestamo %]" 
+                           [% IF tipo_sancion.aplicaAlTipoDePrestamo( tipo_prestamo.getId_tipo_prestamo ) %] checked="checked" [% END %] 
+                 > 
+                </dd>
+                <br />
+          [% END %]
+        </dl>
+[% END %]
 <div class="form-actions">
     [% PERL %]
                         print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
