--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
@@ -91,7 +91,7 @@
                                           [% od %]
                                       </td>
                                       <td>
-                                      [% socio.esRegularToString %]
+                                        <span class="label [% IF socio.esRegular %]label-success[% ELSE %]label-important[% END %]">[% socio.esRegularToString %]</span>
                                       </td>
                             
                                 </tr>
