Varios UI - Circ rapida

--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -8,13 +8,12 @@
 
 <script type="text/javascript">
       $(document).ready(function() {
-        makeToggle('datos_tabla_div','trigger',null,false);
         $('.fancylink').fancybox();
         disableAlert();
       });
 </script>
 <fieldset class="resultados_busqueda">
-    <legend class="titulo_legend click" title='[% "click para acceder a los resultados de la b&uacute;squeda" | i18n %]'>
+    <legend class="titulo_legend" title='[% "click para acceder a los resultados de la b&uacute;squeda" | i18n %]'>
         [% "Resultados de la b&uacute;squeda (cat&aacute;logo)" | i18n %]:</legend>
         <div class="datos_tabla_div" id="datos_tabla_div">
 
