--- a/intranet/htdocs/intranet-tmpl/circ/mostrarDatosEjemplar.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/mostrarDatosEjemplar.tmpl
@@ -4,16 +4,32 @@
         <legend class="titulo_legend">[% "Informaci&oacute;n del ejemplar" | i18n %] </legend>
         <ul class="lista_datos_ejemplar unstyled">
     
-            <li><strong>[% 'T&iacute;tulo: ' | i18n %]</strong>[% titulo %]</li>
+            <li>
+                <strong>[% 'T&iacute;tulo: ' | i18n %]</strong>
+                     [% PERL %]
+                         print C4::AR::Filtros::link_to( text =>     "[% titulo %]",
+                                                         url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
+                                                         params =>   ["id1=[% nivel3.nivel2.id1 %]"],
+                                                         title =>    "[% 'Mostrar Detalle del Registro' | i18n %]",
+                                                         blank => 1,
+                                                     ) ;
+                     [% END %]
+            </li>
 
-            <li><strong>[% 'Autor: ' | i18n %]</strong>[% autor %]</li>
+            <li>
+                <strong>[% 'Autor: ' | i18n %]</strong>
+	             <a class="click" onClick="buscarPorAutor('[% nivel3.nivel2.nivel1.getAutor %]')" title="[% 'Buscar sobre este autor' | i18n %]">
+	                 [% nivel3.nivel2.nivel1.getAutor %]
+	             </a>
+                
+            </li>
 
             <li><strong>[% 'Disponibilidad: ' | i18n %]</strong>
-            <span class="[% IF nivel3.esParaSala %]salaLectura[% ELSE %]prestamo[% END %]">[% nivel3.getDisponibilidadObject.getNombre  %]</span></li>
+            <span class="label [% IF nivel3.esParaPrestamo %] label-info [% END %]">[% nivel3.getDisponibilidadObject.getNombre  %]</span></li>
 
             <li><strong>[% 'Estado:' | i18n %]</strong>
                     [% IF socio_prestamo %]
-                        <strong class="[% IF nivel3.estadoDisponible %]disponible[% ELSE %]nodisponible[% END %]">[% 'Prestado a:' | i18n  %]</strong>
+                        <strong class="label [% IF nivel3.estadoDisponible %] label-success [% ELSE %] label-important [% END %]">[% 'Prestado a:' | i18n  %]</strong>
                         [% PERL %]
                             print C4::AR::Filtros::link_to(   text =>     "[% socio_prestamo.persona.getApeYNom %]",
                                                               url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl",
@@ -29,7 +45,7 @@
                             onCompleteUsuarios();
                         </script>
                     [% ELSE %]
-                        <strong class="[% IF nivel3.estadoDisponible %]disponible[% ELSE %]nodisponible[% END %]">[% nivel3.getEstadoObject.getNombre  %]</strong>
+                        <strong class="label [% IF nivel3.estadoDisponible %] label-success [% ELSE %] label-important [% END %]">[% nivel3.getEstadoObject.getNombre  %]</strong>
                     [% END %]
                     [% IF socio_reserva %]
                         [% 'Reservado a:' | i18n  %]
