--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuarioResult.tmpl
@@ -29,7 +29,7 @@
 
 
 <fieldset>
-    <legend>[% "Resultados de la b&uacute;squeda" | i18n %]</legend>
+    <legend>[% "Resultados de la b&uacute;squeda de Usuarios Potenciales" | i18n %]</legend>
         <!--<div class="datos_tabla_div_user">-->
            
             <div class="well">
