--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
@@ -10,7 +10,7 @@
 [% USE HTML %]
 
 <fieldset>
-    <legend>[% "Resultados de la b&uacute;squeda" | i18n %]</legend>
+    <legend>[% "Resultados de la b&uacute;squeda de Usuarios Reales" | i18n %]</legend>
         <!--<div class="datos_tabla_div_user">-->
              
             <div class="well">
