fic en visualizacion INTRA/OPAC

--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -6,7 +6,7 @@
 
 
 <div id="add_vista_intra" class="modal hide fade">
-	<form class="form-horizontal">
+	<div class="form-horizontal">
 	    <div class="modal-header">
 	         <a href="#" class="close" data-dismiss="modal">×</a>
 	        <h3>[% "Agregar Visualizaci&oacute;n:" | i18n %]</h3>
@@ -74,7 +74,7 @@
 	      </div>
 	    </div>
 	  </div>
-	</form>
+	</div>
 </div>
 <div id="divAgregarModificarVisualizacion"></div>
 <div id="tablaResultCampos"></div>
