--- a/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
@@ -22,6 +22,17 @@
         
   }
 
+  function enableDisableButton(){
+	  var chars = $('#post_twitter').val().length;
+	  
+	  if (chars > 140){
+		  $('#publicar_twitter').attr('disabled','');
+	      $('#publicar_twitter').removeClass("btn-primary");
+	  }else{
+    	  $('#publicar_twitter').removeAttr('disabled');
+          $('#publicar_twitter').addClass("btn-primary");
+	  }
+  }
 
   $(document).ready(function() {
         $('#publicar_twitter').click(function() {
@@ -45,7 +56,7 @@
                 <h3>[% 'Nuevo tweet' | i18n %]<h3>
               </div>
               <div class="modal-body">
-                              <textarea id="post_twitter" name="textarea_twitter" class="input-xxlarge"></textarea>
+                              <textarea id="post_twitter" name="textarea_twitter" class="input-xxlarge" onkeyup="enableDisableButton();"></textarea>
                               <p class="help-block">[% 'Sea breve, no m&aacute;s de 140 caracteres' | i18n %].</p>
                 </div>                
               </div>
