--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarCirculacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarCirculacion.tmpl
@@ -43,6 +43,7 @@
 	                    [% FOREACH historico IN historico_circulacion %]
 	                        <tr>
 	                              <td>
+	                               [% TRY %]
 	                                  [% PERL %]
 	                                      print C4::AR::Filtros::link_to(   text =>     "[% historico.socio.persona.getApeYNom %]",
 	                                                                        url     =>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
@@ -50,18 +51,28 @@
 	                                                                        tooltip =>   "[% 'Mostrar Detalle del Usuario' | i18n %]",
 	                                                                  );
 	                                  [% END %]
+                                   [% CATCH %]
+                                      [% 'Ususario inexistente' | i18n %] ([% historico.nro_socio %])
+                                   [% END %]
+	                                  
 	                              </td>
 	                              <td>
 	                                    [% IF historico.responsable == "Sistema" %]
-											Sistema 
+											[% 'Sistema' | i18n %] 
 										[% ELSE %]
-										  [% PERL %]
-											  print C4::AR::Filtros::link_to(   text =>     "[% historico.responsable_ref.persona.getApeYNom %]",
-																				url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
-																				params =>   ["nro_socio=[% historico.responsable_ref.getNro_socio %]"],
-	                                                                            tooltip =>    "[% 'Mostrar Detalle del Usuario' | i18n %]",
-																		  );
-										  [% END %]
+										   
+										  [% TRY %]
+											  [% PERL %]
+												  print C4::AR::Filtros::link_to(   text      =>     "[% historico.responsable_ref.persona.getApeYNom %]",
+																					url       =>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
+																					params    =>   ["nro_socio=[% historico.responsable_ref.getNro_socio %]"],
+		                                                                            tooltip   =>    "[% 'Mostrar Detalle del Usuario' | i18n %]",
+																			  );
+											  [% END %]
+										   [% CATCH %]
+										      [% 'Ususario inexistente' | i18n %] ([% historico.responsable %])
+										   [% END %]
+										   
 										[% END %]
 	                                  
 	                              </td>
