--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -1,3 +1,5 @@
+[% INCLUDE "intranet-top.inc" %]
+
 <script src="/intranet-tmpl/includes/CombosHelper.js"></script> 
 <!-- para manejar la ventana de campos MARC -->
 <script src="/intranet-tmpl/includes/popups/helpCamposMARC.js"></script>
@@ -6,8 +8,6 @@
 <script src="/intranet-tmpl/includes/admin/tablasDeReferencia.js"></script>
 <script src="/includes/jquery/jquery.jeditable.js"></script>
 
-
-[% INCLUDE 'datePicker.inc' %]
 
 [% INCLUDE 'FormValidateHelper.inc' %]
 
