Nuevo rating en OPAC

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -9,6 +9,8 @@
 <script src="/includes/jquery/jquery.jeditable.js"></script>
 
 
+[% INCLUDE 'datePicker.inc' %]
+
 [% INCLUDE 'FormValidateHelper.inc' %]
 
 [% INCLUDE 'AutocompleteHelper.inc' %] 
