--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -124,7 +124,7 @@ var loaderPath= "";
                                 <div class="alert alert-error">[% mensaje_error_foto %]</div>
 	                      [% END %]
 	
-	                        <dl>
+	                        <dl id="div_uploader" style="display:none;">
 	                             <dt>
 		                                <h6>[% 'Seleccione una im&aacute;gen' | i18n %]</h6>
 		                            <div id="file-uploader">
@@ -133,7 +133,7 @@ var loaderPath= "";
 		                                    <!-- or put a simple form for upload here -->
 		                                </noscript>                          
 		                         </dt>
-	                       </dl>
+	                        </dl>
 	
 	</div>
 
