--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/modificarCredenciales.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/modificarCredenciales.tmpl
@@ -1,5 +1,26 @@
-<li class="sub_item">
-    <label for="tipo_socio_id"> [% "Credenciales" | i18n %]</label>
-	[% comboDeCredenciales %]
-</li>
-<input type="button" class="sub_item" name="save_button" class="submit-button" onclick="guardarModificacionCredenciales()" id="save_button" value="[% 'Guardar modificaci&oacute;n' | i18n %]">
+<div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">×</a>
+    <h3>[% "Cambio de credenciales" | i18n %]</h3>
+</div>
+
+<div class="modal-body">
+            <div class="control-group">
+                
+                  <label  class="control-label" for="tipo_socio_id">[% "Credenciales" | i18n %]</label>
+                  <div class="controls">
+                      [% comboDeCredenciales %]
+                  </div>
+            </div>
+
+</div>
+
+<div class="modal-footer">
+                        [% PERL %]
+                             print C4::AR::Filtros::action_button(
+                                     title           => '[% " Aceptar" | i18n %]',
+                                     button          => 'btn btn-success',
+                                     action          => 'guardarModificacionCredenciales();',
+                                 );
+                         [% END %]
+
+</div>
