--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -106,8 +106,8 @@
 	        [%  IF mostrar_captcha  %]
 	             <div class="alert alert-error">[% 'Comprobaci&oacute;n de seguridad: Debido a que ha intentado iniciar sesi&oacute;n varias veces con el mismo usuario, deber&aacute; ingresar el siguiente c&oacute;digo de seguridad' | i18n %]</p>    
 	             <div id="captcha"> 
-	               <script src="https://www.google.com/recaptcha/api/challenge?k=6LehoMQSAAAAAOhylvTt_7RrPKVdll7CN0jJRdaf" type="text/javascript"></script>
-	               <noscript><iframe frameborder="0" height="30" src="http://www.google.com/recaptcha/api/noscript?k=6LehoMQSAAAAAOhylvTt_7RrPKVdll7CN0jJRdaf" width="500"></iframe>
+	               <script src="https://www.google.com/recaptcha/api/challenge?k=[% re_captcha_public_key%]" type="text/javascript"></script>
+	               <noscript><iframe frameborder="0" height="30" src="http://www.google.com/recaptcha/api/noscript?k=[% re_captcha_public_key%]" width="500"></iframe>
 	                         <textarea cols="40" name="recaptcha_challenge_field" rows="3"></textarea>
 	                         <input name="recaptcha_response_field" type="hidden" value="manual_challenge" />
 	               </noscript>
