--- a/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
@@ -207,7 +207,7 @@ function MultiSelector( list_target, max ){this.list_target = list_target;this.c
                                             <!-- The fileinput-button span is used to style the file input field as button -->
                                             <span class="btn btn-success fileinput-button">
                                                 <span><i class="icon-plus icon-white"></i>[% " Agregar archivos..." | i18n %]</span>
-                                                <input type="file" id="imagesInput" multiple>
+                                                <input type="file" id="imagesInput">
                                             </span>
                                         </div>
                                         
@@ -244,7 +244,7 @@ function MultiSelector( list_target, max ){this.list_target = list_target;this.c
                             <!-- The fileinput-button span is used to style the file input field as button -->
                             <span class="btn btn-success fileinput-button">
                                 <span><i class="icon-plus icon-white"></i>[% " Agregar archivos..." | i18n %]</span>
-                                <input type="file" id="imagesInput" multiple>
+                                <input type="file" id="imagesInput">
                             </span>
                         </div>
                         
